--- a/workspace/webstormproject/learn_demo_base1903/vue/基础/4.watch监听器.html
+++ b/workspace/webstormproject/learn_demo_base1903/vue/基础/4.watch监听器.html
@@ -15,7 +15,7 @@
 
 </div>
 </body>
-<script src="https://cdn.bootcss.com/vue/2.6.9/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script type="text/javascript">
 
     const vm = new Vue({
