--- a/workspace/webstormproject/learn_demo_base1903/vue/基础/8.表单绑定.html
+++ b/workspace/webstormproject/learn_demo_base1903/vue/基础/8.表单绑定.html
@@ -47,7 +47,7 @@
     </div>
     <hr>
     <select v-model="selected2">
-        <option v-for="option in options" v-bind:value="option.value">
+        <option v-for="option in options" :value="option.value">
             {{ option.text }}
         </option>
     </select>
