--- a/workspace/webstormproject/learn_demo_base1903/vue/基础/10.is用来动态切换组件.html
+++ b/workspace/webstormproject/learn_demo_base1903/vue/基础/10.is用来动态切换组件.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://cdn.bootcss.com/vue/2.6.9/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
 <div id="app">
