--- a/workspace/webstormproject/vuehr/public/index.html
+++ b/workspace/webstormproject/vuehr/public/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vuehr</title>
   </head>
-  <body>
+  <!-- 默认body有边距-->
+  <body style="margin: 0px ; padding: 0px">
     <noscript>
       <strong>We're sorry but vuehr doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
